--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Daivam Products</title>
-  <link rel="icon" href="pic/logod.jpeg" type="image/x-icon">
+  <link rel="icon" href="logod.jpeg" type="image/x-icon">
   <link rel="stylesheet" href="about.css">
 </head>
 <body>
@@ -12,18 +12,18 @@
     <div class="about">
       <div class="text">
         <h2>ABOUT DAIVAM PRODUCTS</h2>
-        <img src="pic/oils.jpeg" class="pic">
+        <img src="oils.jpeg" class="pic">
         <h5>OUR PRODUCT</h5>
         <p>100% pure, natural, high-quality Shri Daivam wood-pressed oil is extracted using a wooden grinder (Marada Gana). Processing, Production, and Packaging are conducted in a hygienic environment by experienced professionals.</p>
         <h5>WOOD PRESSED COCONUT OIL</h5>
-        <img src="pic/coco.jpeg" class="pic">
+        <img src="coco.jpeg" class="pic">
         <p>Unlock the true essence of coconut with our Shri Daivam Wood-Pressed Coconut Oil. Crafted using a time-honored method, our oil stands out for its unparalleled quality and natural goodness.</p>
         <p>Wood-pressed coconut oil retains natural antioxidants that benefit our bodies. It contains medium-chain fatty acids that possess antimicrobial properties, which can help strengthen the immune system. It improves blood circulation and contributes to healthy skin by preventing wrinkles and premature aging. Loaded with antioxidants, it strengthens the jaws and reduces gum bleeding. Moreover, it improves hair growth and repairs damaged hair.</p>
         <h5>WOOD PRESSED GROUNDNUT OIL</h5>
-        <img src="pic/groundnut.jpeg" class="pic">
+        <img src="groundnut.jpeg" class="pic">
         <p>One of the best features of Shri Daivam pressed groundnut oil is that it has zero cholesterol. This makes it a healthy fat. The vitamin E content in wood pressed groundnut oil plays a crucial role in supporting your immune system. Good for heart, reduces the risk of cancer, boosts insulin sensitivity, provides relief from constipation. Shri Daivam Groundnut oil is a highly recommended cooking oil to be included in your daily diet.</p>
         <h5>WOOD PRESSED SESAME OIL</h5>
-        <img src="pic/sesame.jpeg" class="pic">
+        <img src="sesame.jpeg" class="pic">
         <p>Shri Daivam wood pressed sesame oil is high in antioxidants, protects skin health, controls diabetes, promotes hair growth, heals wounds. This oil is a rich source of many nutrients like zinc, copper, iron, calcium, magnesium, and Vitamin E & B-6. All these nutrients are essential for our body and help with the protection, nourishment, and detoxification of damaged skin and hair.</p>
         <h5>BENIFITS: </h5>
         <p>
