--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>Shri Daivam--Marketing Portfolio</title>
-    <link rel="icon" href="pic/logod.jpeg" type="image/x-icon">
+    <link rel="icon" href="logod.jpeg" type="image/x-icon">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="home.css">
 </head>
@@ -11,13 +11,13 @@
     <div id="videoAd" class="advertising-video">
         <button class="close-btn" onclick="closeVideoAd()">X</button>
         <video id="adVideo" width="540" height="360" controls>
-            <source src="pic/Shri daivam making.mp4" type="video/mp4">
+            <source src="Shri daivam making.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
     <div class="main">
         <div class="navbar">
-            <img src="pic/logod.jpeg" class="logo">
+            <img src="logod.jpeg" class="logo">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
