--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Contact Daivam</title>
-    <link rel="icon" href="pic/logod.jpeg" type="image/x-icon">
+    <link rel="icon" href="logod.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="contact.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
