--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Watch Shri Daivam Videos</title>
-  <link rel="icon" href="pic/logod.jpeg" type="image/x-icon">
+  <link rel="icon" href="logod.jpeg" type="image/x-icon">
   <link rel="stylesheet" href="videos.css">
 </head>
 <body>
@@ -13,16 +13,16 @@
         <h1>How Daivam Wood-Pressed Oil made ?</h1>
         <h2>Here are the making videos!!! Enjoy watching</h2>
         <h2>Please Like and Share the videos and Don't forget to subscribe our Youtube Channel <a href="https://www.youtube.com/embed/OeRygYLHH-U">Shri Daivam</a>!!</h2>
-        <iframe width="620" height="315" src="pic/Shri daivam making.mp4"></iframe>
+        <iframe width="620" height="315" src="Shri daivam making.mp4"></iframe>
         <h3>WOOD PRESSED COCONUT OIL</h3>
         <iframe width="620" height="315" src="https://www.youtube.com/embed/OeRygYLHH-U"></iframe>
         <h3>WOOD PRESSED GROUNDNUT OIL</h3>
         <video width ="620" height="340" controls>
-            <source src="pic/ground nut video.mp4" type="video/mp4">
+            <source src="ground nut video.mp4" type="video/mp4">
         </video>
         <h3>WOOD PRESSED SESAME OIL</h3>
         <video width ="620" height="340" controls>
-            <source src="pic/sesamevideo.mp4" type="video/mp4">
+            <source src="sesamevideo.mp4" type="video/mp4">
         </video>
       </div>
     </div>
