--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Shri Daivam--Marketing Portfolio</title>
     <link rel="icon" href="logod.jpeg" type="image/x-icon">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
